# rock-paper-scissor

./: .gitignore  Cargo.toml  README.md
src/: e_choice.rs  get_choice.rs  main.rs  prompt.rs
src/enums/: choice.rs
src/helpers/: get_choice.rs  get_input.rs  get_winner.rs  mod.rs  show_loader.rs
src/lang/: de.json  en.json  fr.json  mg.json
src/models/: element.rs  item.rs  lang.rs  mod.rs  stats.rs
